--- a/www/i18n/en.json
+++ b/www/i18n/en.json
@@ -1,8 +1,11 @@
 {
     "en": {
-      "group": "Files",
       "video": "Video",
       "audio": "Audio",
-      "photo": "Photo"
+      "photo": "Photo",
+      "editUser": "Edit user",
+      "webStats": "Web statistics",
+      "uploadSett": "Upload settings",
+      "events": "Events"
     }
 }
